src/main/java/com/example/githubrepositoriesapi/infrastructure/error/MediaTypeExceptionDto.java
package com.example.githubrepositoriesapi.infrastructure.error;

public record MediaTypeExceptionDto(String message, Integer status) {
}
